--- a/archives/toutiao-search/2024-04-22.md
+++ b/archives/toutiao-search/2024-04-22.md
@@ -1,55 +1,76 @@
 # 2024-04-22
 
-共 258 条
+共 277 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 22 2024 17:00:47 GMT+0800 (China Standard Time) -->
-1. [父亲殴打霸凌者获赞：私力复仇可行吗](https://so.toutiao.com/search?keyword=父亲殴打霸凌者获赞：私力复仇可行吗)
+<!-- 最后更新时间 Mon Apr 22 2024 18:00:49 GMT+0800 (China Standard Time) -->
 1. [1名正部、2名副部同日被开除党籍](https://so.toutiao.com/search?keyword=1名正部、2名副部同日被开除党籍)
+1. [原来29年前就实行双休了](https://so.toutiao.com/search?keyword=原来29年前就实行双休了)
 1. [仰望浩瀚星空 爱护美丽地球](https://so.toutiao.com/search?keyword=仰望浩瀚星空+爱护美丽地球)
-1. [9岁男孩当街遭人重伤](https://so.toutiao.com/search?keyword=9岁男孩当街遭人重伤)
-1. [布林肯4月24日至26日访华](https://so.toutiao.com/search?keyword=布林肯4月24日至26日访华)
-1. [高中生被楼上坠落树根砸中身亡](https://so.toutiao.com/search?keyword=高中生被楼上坠落树根砸中身亡)
-1. [以色列呼吁欧洲尽快觉醒与伊朗对抗](https://so.toutiao.com/search?keyword=以色列呼吁欧洲尽快觉醒与伊朗对抗)
-1. [美方代表认出中国红旗车大声惊叹](https://so.toutiao.com/search?keyword=美方代表认出中国红旗车大声惊叹)
-1. [王健林全资控股珠海万达公司](https://so.toutiao.com/search?keyword=王健林全资控股珠海万达公司)
-1. [网友：保证双休是调休的前提](https://so.toutiao.com/search?keyword=网友：保证双休是调休的前提)
-1. [女儿遭霸凌 家长打同学能免罚吗](https://so.toutiao.com/search?keyword=女儿遭霸凌+家长打同学能免罚吗)
+1. [小伙用AI生成机器人揉面视频](https://so.toutiao.com/search?keyword=小伙用AI生成机器人揉面视频)
+1. [男子拍重庆夜景被商家要求收费](https://so.toutiao.com/search?keyword=男子拍重庆夜景被商家要求收费)
 1. [雷军疑似回应华为截胡小米SU7](https://so.toutiao.com/search?keyword=雷军疑似回应华为截胡小米SU7)
-1. [女律师否认做擦边直播月入2万](https://so.toutiao.com/search?keyword=女律师否认做擦边直播月入2万)
-1. [官方辟谣广东英德洪水致码头溃堤](https://so.toutiao.com/search?keyword=官方辟谣广东英德洪水致码头溃堤)
+1. [金价涨到700元不敢买也不敢卖](https://so.toutiao.com/search?keyword=金价涨到700元不敢买也不敢卖)
+1. [男子生病住院 见到老婆瞬间委屈](https://so.toutiao.com/search?keyword=男子生病住院+见到老婆瞬间委屈)
+1. [日本年轻人开始流行友情婚](https://so.toutiao.com/search?keyword=日本年轻人开始流行友情婚)
+1. [南充举行地铁一号线奠基仪式？不实](https://so.toutiao.com/search?keyword=南充举行地铁一号线奠基仪式？不实)
 1. [家长打男生内情：女儿多次遭霸凌](https://so.toutiao.com/search?keyword=家长打男生内情：女儿多次遭霸凌)
+1. [美方代表认出中国红旗车大声惊叹](https://so.toutiao.com/search?keyword=美方代表认出中国红旗车大声惊叹)
+1. [网友：保证双休是调休的前提](https://so.toutiao.com/search?keyword=网友：保证双休是调休的前提)
+1. [洪秀柱提问学生：如何解决两岸困境](https://so.toutiao.com/search?keyword=洪秀柱提问学生：如何解决两岸困境)
+1. [媒体：开封王婆江西说媒热度难再](https://so.toutiao.com/search?keyword=媒体：开封王婆江西说媒热度难再)
+1. [以色列呼吁欧洲尽快觉醒与伊朗对抗](https://so.toutiao.com/search?keyword=以色列呼吁欧洲尽快觉醒与伊朗对抗)
+1. [以军撤离后汗尤尼斯发现两个乱葬坑](https://so.toutiao.com/search?keyword=以军撤离后汗尤尼斯发现两个乱葬坑)
+1. [12306被质疑纵容“买长乘短”](https://so.toutiao.com/search?keyword=12306被质疑纵容“买长乘短”)
 1. [孙颖莎谈擦边球](https://so.toutiao.com/search?keyword=孙颖莎谈擦边球)
+1. [男子转移被困家人 边救人边吐泥水](https://so.toutiao.com/search?keyword=男子转移被困家人+边救人边吐泥水)
+1. [男童头朝下被马拖行数百米去世](https://so.toutiao.com/search?keyword=男童头朝下被马拖行数百米去世)
+1. [9岁男孩当街遭人重伤](https://so.toutiao.com/search?keyword=9岁男孩当街遭人重伤)
+1. [中非共和国沉船事故已致62人死亡](https://so.toutiao.com/search?keyword=中非共和国沉船事故已致62人死亡)
+1. [布林肯4月24日至26日访华](https://so.toutiao.com/search?keyword=布林肯4月24日至26日访华)
+1. [父亲殴打霸凌者获赞：私力复仇可行吗](https://so.toutiao.com/search?keyword=父亲殴打霸凌者获赞：私力复仇可行吗)
+1. [央媒评许美静演唱会风波](https://so.toutiao.com/search?keyword=央媒评许美静演唱会风波)
+1. [金融机构纷纷上调金价预期](https://so.toutiao.com/search?keyword=金融机构纷纷上调金价预期)
+1. [大V评家长殴打霸凌者：学校不作为](https://so.toutiao.com/search?keyword=大V评家长殴打霸凌者：学校不作为)
+1. [女律师否认做擦边直播月入2万](https://so.toutiao.com/search?keyword=女律师否认做擦边直播月入2万)
+1. [全红婵书包挂了个“动物园”吧](https://so.toutiao.com/search?keyword=全红婵书包挂了个“动物园”吧)
+1. [今年第二个龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=今年第二个龙年龙月龙日龙时)
+1. [落马官员曾为儿子公司“开路”](https://so.toutiao.com/search?keyword=落马官员曾为儿子公司“开路”)
+1. [男孩跳向路边井盖 不慎掉进下水道](https://so.toutiao.com/search?keyword=男孩跳向路边井盖+不慎掉进下水道)
+1. [专家：美国对外援助法案让战争升级](https://so.toutiao.com/search?keyword=专家：美国对外援助法案让战争升级)
+1. [外国游客在中国旅游被淋成落汤鸡](https://so.toutiao.com/search?keyword=外国游客在中国旅游被淋成落汤鸡)
+1. [上铺老人强占下铺还指责铁路](https://so.toutiao.com/search?keyword=上铺老人强占下铺还指责铁路)
+1. [北京大风冰雹来袭](https://so.toutiao.com/search?keyword=北京大风冰雹来袭)
+1. [女老师去学校路上失踪 警方立案](https://so.toutiao.com/search?keyword=女老师去学校路上失踪+警方立案)
+1. [北大校运动会现人工智能机器人](https://so.toutiao.com/search?keyword=北大校运动会现人工智能机器人)
+1. [加沙超万名妇女被杀害 联合国发声](https://so.toutiao.com/search?keyword=加沙超万名妇女被杀害+联合国发声)
+1. [专家称休假改革难在众口难调](https://so.toutiao.com/search?keyword=专家称休假改革难在众口难调)
+1. [华为Pura 70标准版及Pro+版开售](https://so.toutiao.com/search?keyword=华为Pura+70标准版及Pro+版开售)
+1. [洪秀柱和AI下象棋](https://so.toutiao.com/search?keyword=洪秀柱和AI下象棋)
+1. [为何被海鲜扎手可能丧命](https://so.toutiao.com/search?keyword=为何被海鲜扎手可能丧命)
+1. [女子找王婆说媒要求男方月入超2万5](https://so.toutiao.com/search?keyword=女子找王婆说媒要求男方月入超2万5)
+1. [为何年轻人交个人养老金积极性不高](https://so.toutiao.com/search?keyword=为何年轻人交个人养老金积极性不高)
+1. [智界汽车发文感谢雷军推荐智界S7](https://so.toutiao.com/search?keyword=智界汽车发文感谢雷军推荐智界S7)
+1. [名嘴：解放军很快就可到达台北上空](https://so.toutiao.com/search?keyword=名嘴：解放军很快就可到达台北上空)
+1. [黄瓜高产操作指南](https://so.toutiao.com/search?keyword=黄瓜高产操作指南)
+1. [法报称巴黎奥运会筹备面临七大挑战](https://so.toutiao.com/search?keyword=法报称巴黎奥运会筹备面临七大挑战)
+1. [高中生被楼上坠落树根砸中身亡](https://so.toutiao.com/search?keyword=高中生被楼上坠落树根砸中身亡)
+1. [王健林全资控股珠海万达公司](https://so.toutiao.com/search?keyword=王健林全资控股珠海万达公司)
+1. [女儿遭霸凌 家长打同学能免罚吗](https://so.toutiao.com/search?keyword=女儿遭霸凌+家长打同学能免罚吗)
+1. [官方辟谣广东英德洪水致码头溃堤](https://so.toutiao.com/search?keyword=官方辟谣广东英德洪水致码头溃堤)
 1. [广东英德洪水水位有所下降](https://so.toutiao.com/search?keyword=广东英德洪水水位有所下降)
 1. [家长疑殴打霸凌女儿的同学被行拘](https://so.toutiao.com/search?keyword=家长疑殴打霸凌女儿的同学被行拘)
-1. [媒体：开封王婆江西说媒热度难再](https://so.toutiao.com/search?keyword=媒体：开封王婆江西说媒热度难再)
-1. [全红婵书包挂了个“动物园”吧](https://so.toutiao.com/search?keyword=全红婵书包挂了个“动物园”吧)
-1. [大V评家长殴打霸凌者：学校不作为](https://so.toutiao.com/search?keyword=大V评家长殴打霸凌者：学校不作为)
-1. [男孩跳向路边井盖 不慎掉进下水道](https://so.toutiao.com/search?keyword=男孩跳向路边井盖+不慎掉进下水道)
-1. [为何被海鲜扎手可能丧命](https://so.toutiao.com/search?keyword=为何被海鲜扎手可能丧命)
 1. [新能源车主称买车容易养车难](https://so.toutiao.com/search?keyword=新能源车主称买车容易养车难)
-1. [女老师去学校路上失踪 警方立案](https://so.toutiao.com/search?keyword=女老师去学校路上失踪+警方立案)
-1. [男子转移被困家人 边救人边吐泥水](https://so.toutiao.com/search?keyword=男子转移被困家人+边救人边吐泥水)
-1. [12306被质疑纵容“买长乘短”](https://so.toutiao.com/search?keyword=12306被质疑纵容“买长乘短”)
 1. [产妇父亲突然倒地医护人员光速抢救](https://so.toutiao.com/search?keyword=产妇父亲突然倒地医护人员光速抢救)
 1. [父亲拍14岁女儿杂乱房间发同学群](https://so.toutiao.com/search?keyword=父亲拍14岁女儿杂乱房间发同学群)
-1. [金价涨到700元不敢买也不敢卖](https://so.toutiao.com/search?keyword=金价涨到700元不敢买也不敢卖)
 1. [台男子坠入山谷10天机智自救](https://so.toutiao.com/search?keyword=台男子坠入山谷10天机智自救)
-1. [名嘴：解放军很快就可到达台北上空](https://so.toutiao.com/search?keyword=名嘴：解放军很快就可到达台北上空)
-1. [央媒评许美静演唱会风波](https://so.toutiao.com/search?keyword=央媒评许美静演唱会风波)
 1. [《哈尔滨一九四四》首播口碑](https://so.toutiao.com/search?keyword=《哈尔滨一九四四》首播口碑)
-1. [上铺老人强占下铺还指责铁路](https://so.toutiao.com/search?keyword=上铺老人强占下铺还指责铁路)
-1. [加沙超万名妇女被杀害 联合国发声](https://so.toutiao.com/search?keyword=加沙超万名妇女被杀害+联合国发声)
-1. [华为Pura 70标准版及Pro+版开售](https://so.toutiao.com/search?keyword=华为Pura+70标准版及Pro+版开售)
 1. [以色列使用了什么武器打击伊朗目标](https://so.toutiao.com/search?keyword=以色列使用了什么武器打击伊朗目标)
-1. [今年第二个龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=今年第二个龙年龙月龙日龙时)
 1. [司机后座藏38万现金入境被海关查获](https://so.toutiao.com/search?keyword=司机后座藏38万现金入境被海关查获)
 1. [女子福建海边偶遇蓝眼泪](https://so.toutiao.com/search?keyword=女子福建海边偶遇蓝眼泪)
 1. [雷军：北京车展上会详细介绍产能](https://so.toutiao.com/search?keyword=雷军：北京车展上会详细介绍产能)
-1. [女子找王婆说媒要求男方月入超2万5](https://so.toutiao.com/search?keyword=女子找王婆说媒要求男方月入超2万5)
 1. [亚洲打响货币保卫战？](https://so.toutiao.com/search?keyword=亚洲打响货币保卫战？)
 1. [运动员东京奥运会药检阳性？中方回应](https://so.toutiao.com/search?keyword=运动员东京奥运会药检阳性？中方回应)
-1. [智界汽车发文感谢雷军推荐智界S7](https://so.toutiao.com/search?keyword=智界汽车发文感谢雷军推荐智界S7)
 1. [以男子踢翻巴勒斯坦国旗后遭炸伤](https://so.toutiao.com/search?keyword=以男子踢翻巴勒斯坦国旗后遭炸伤)
 1. [钟薛高创始人：卖红薯也要把债还上](https://so.toutiao.com/search?keyword=钟薛高创始人：卖红薯也要把债还上)
 1. [西湖大爷说和周杰伦合唱很开心](https://so.toutiao.com/search?keyword=西湖大爷说和周杰伦合唱很开心)
@@ -103,7 +124,6 @@
 1. [乌总统称乌不会成“第二个阿富汗”](https://so.toutiao.com/search?keyword=乌总统称乌不会成“第二个阿富汗”)
 1. [网友谈吴燕妮化妆比赛：个人自由](https://so.toutiao.com/search?keyword=网友谈吴燕妮化妆比赛：个人自由)
 1. [马龙感谢自己0比3时没放弃](https://so.toutiao.com/search?keyword=马龙感谢自己0比3时没放弃)
-1. [洪秀柱提问学生：如何解决两岸困境](https://so.toutiao.com/search?keyword=洪秀柱提问学生：如何解决两岸困境)
 1. [景区回应游客爬山几小时景点不让进](https://so.toutiao.com/search?keyword=景区回应游客爬山几小时景点不让进)
 1. [理想L6订单72小时破10000台](https://so.toutiao.com/search?keyword=理想L6订单72小时破10000台)
 1. [新疆男篮广州男篮起冲突](https://so.toutiao.com/search?keyword=新疆男篮广州男篮起冲突)
@@ -137,7 +157,6 @@
 1. [理想多车系降价 最高达3万](https://so.toutiao.com/search?keyword=理想多车系降价+最高达3万)
 1. [孙颖莎夺冠后深情亲吻球台](https://so.toutiao.com/search?keyword=孙颖莎夺冠后深情亲吻球台)
 1. [济南一对母女在黄河边失踪](https://so.toutiao.com/search?keyword=济南一对母女在黄河边失踪)
-1. [为何年轻人交个人养老金积极性不高](https://so.toutiao.com/search?keyword=为何年轻人交个人养老金积极性不高)
 1. [起底许美静演唱会主办方](https://so.toutiao.com/search?keyword=起底许美静演唱会主办方)
 1. [卫星图像显示伊朗空军基地疑遭破坏](https://so.toutiao.com/search?keyword=卫星图像显示伊朗空军基地疑遭破坏)
 1. [特斯拉与小米SU7价差缩小到1.6万](https://so.toutiao.com/search?keyword=特斯拉与小米SU7价差缩小到1.6万)
