--- a/archives/toutiao-search/2024-04-22.md
+++ b/archives/toutiao-search/2024-04-22.md
@@ -1,56 +1,71 @@
 # 2024-04-22
 
-共 277 条
+共 289 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 22 2024 18:00:49 GMT+0800 (China Standard Time) -->
-1. [1名正部、2名副部同日被开除党籍](https://so.toutiao.com/search?keyword=1名正部、2名副部同日被开除党籍)
+<!-- 最后更新时间 Mon Apr 22 2024 19:00:49 GMT+0800 (China Standard Time) -->
+1. [广东强降雨已致4死10失联](https://so.toutiao.com/search?keyword=广东强降雨已致4死10失联)
 1. [原来29年前就实行双休了](https://so.toutiao.com/search?keyword=原来29年前就实行双休了)
 1. [仰望浩瀚星空 爱护美丽地球](https://so.toutiao.com/search?keyword=仰望浩瀚星空+爱护美丽地球)
-1. [小伙用AI生成机器人揉面视频](https://so.toutiao.com/search?keyword=小伙用AI生成机器人揉面视频)
+1. [1名正部、2名副部同日被开除党籍](https://so.toutiao.com/search?keyword=1名正部、2名副部同日被开除党籍)
 1. [男子拍重庆夜景被商家要求收费](https://so.toutiao.com/search?keyword=男子拍重庆夜景被商家要求收费)
-1. [雷军疑似回应华为截胡小米SU7](https://so.toutiao.com/search?keyword=雷军疑似回应华为截胡小米SU7)
+1. [家长回应9岁男童遭邻居殴打进ICU](https://so.toutiao.com/search?keyword=家长回应9岁男童遭邻居殴打进ICU)
 1. [金价涨到700元不敢买也不敢卖](https://so.toutiao.com/search?keyword=金价涨到700元不敢买也不敢卖)
-1. [男子生病住院 见到老婆瞬间委屈](https://so.toutiao.com/search?keyword=男子生病住院+见到老婆瞬间委屈)
+1. [张又侠：无意跟任何国家打冷战热战](https://so.toutiao.com/search?keyword=张又侠：无意跟任何国家打冷战热战)
 1. [日本年轻人开始流行友情婚](https://so.toutiao.com/search?keyword=日本年轻人开始流行友情婚)
 1. [南充举行地铁一号线奠基仪式？不实](https://so.toutiao.com/search?keyword=南充举行地铁一号线奠基仪式？不实)
 1. [家长打男生内情：女儿多次遭霸凌](https://so.toutiao.com/search?keyword=家长打男生内情：女儿多次遭霸凌)
-1. [美方代表认出中国红旗车大声惊叹](https://so.toutiao.com/search?keyword=美方代表认出中国红旗车大声惊叹)
-1. [网友：保证双休是调休的前提](https://so.toutiao.com/search?keyword=网友：保证双休是调休的前提)
-1. [洪秀柱提问学生：如何解决两岸困境](https://so.toutiao.com/search?keyword=洪秀柱提问学生：如何解决两岸困境)
-1. [媒体：开封王婆江西说媒热度难再](https://so.toutiao.com/search?keyword=媒体：开封王婆江西说媒热度难再)
-1. [以色列呼吁欧洲尽快觉醒与伊朗对抗](https://so.toutiao.com/search?keyword=以色列呼吁欧洲尽快觉醒与伊朗对抗)
-1. [以军撤离后汗尤尼斯发现两个乱葬坑](https://so.toutiao.com/search?keyword=以军撤离后汗尤尼斯发现两个乱葬坑)
+1. [小伙用AI生成机器人揉面视频](https://so.toutiao.com/search?keyword=小伙用AI生成机器人揉面视频)
 1. [12306被质疑纵容“买长乘短”](https://so.toutiao.com/search?keyword=12306被质疑纵容“买长乘短”)
+1. [金融机构纷纷上调金价预期](https://so.toutiao.com/search?keyword=金融机构纷纷上调金价预期)
+1. [媒体：开封王婆江西说媒热度难再](https://so.toutiao.com/search?keyword=媒体：开封王婆江西说媒热度难再)
 1. [孙颖莎谈擦边球](https://so.toutiao.com/search?keyword=孙颖莎谈擦边球)
+1. [大V评家长殴打霸凌者：学校不作为](https://so.toutiao.com/search?keyword=大V评家长殴打霸凌者：学校不作为)
+1. [美方代表认出中国红旗车大声惊叹](https://so.toutiao.com/search?keyword=美方代表认出中国红旗车大声惊叹)
+1. [男子生病住院 见到老婆瞬间委屈](https://so.toutiao.com/search?keyword=男子生病住院+见到老婆瞬间委屈)
+1. [雷军疑似回应华为截胡小米SU7](https://so.toutiao.com/search?keyword=雷军疑似回应华为截胡小米SU7)
+1. [乌总统：乌克兰人为北约创造了价值](https://so.toutiao.com/search?keyword=乌总统：乌克兰人为北约创造了价值)
+1. [央媒评许美静演唱会风波](https://so.toutiao.com/search?keyword=央媒评许美静演唱会风波)
+1. [美国或将于下周向乌提供ATACMS](https://so.toutiao.com/search?keyword=美国或将于下周向乌提供ATACMS)
+1. [广东清远暴雨涨水 水牛群涉水过江](https://so.toutiao.com/search?keyword=广东清远暴雨涨水+水牛群涉水过江)
+1. [网友：保证双休是调休的前提](https://so.toutiao.com/search?keyword=网友：保证双休是调休的前提)
+1. [河北一粮库2年近万吨玉米不翼而飞](https://so.toutiao.com/search?keyword=河北一粮库2年近万吨玉米不翼而飞)
+1. [马祖籍民代陈雪生将随傅崐萁访陆](https://so.toutiao.com/search?keyword=马祖籍民代陈雪生将随傅崐萁访陆)
+1. [中非共和国沉船事故已致62人死亡](https://so.toutiao.com/search?keyword=中非共和国沉船事故已致62人死亡)
+1. [北京大风冰雹来袭](https://so.toutiao.com/search?keyword=北京大风冰雹来袭)
+1. [智界汽车发文感谢雷军推荐智界S7](https://so.toutiao.com/search?keyword=智界汽车发文感谢雷军推荐智界S7)
+1. [落马官员曾为儿子公司“开路”](https://so.toutiao.com/search?keyword=落马官员曾为儿子公司“开路”)
+1. [以色列呼吁欧洲尽快觉醒与伊朗对抗](https://so.toutiao.com/search?keyword=以色列呼吁欧洲尽快觉醒与伊朗对抗)
+1. [上铺老人强占下铺还指责铁路](https://so.toutiao.com/search?keyword=上铺老人强占下铺还指责铁路)
+1. [布林肯4月24日至26日访华](https://so.toutiao.com/search?keyword=布林肯4月24日至26日访华)
+1. [外国游客在中国旅游被淋成落汤鸡](https://so.toutiao.com/search?keyword=外国游客在中国旅游被淋成落汤鸡)
+1. [女律师否认做擦边直播月入2万](https://so.toutiao.com/search?keyword=女律师否认做擦边直播月入2万)
+1. [女老师去学校路上失踪 警方立案](https://so.toutiao.com/search?keyword=女老师去学校路上失踪+警方立案)
+1. [杨幂新剧演技](https://so.toutiao.com/search?keyword=杨幂新剧演技)
+1. [新能源车主称买车容易养车难](https://so.toutiao.com/search?keyword=新能源车主称买车容易养车难)
+1. [洪秀柱和AI下象棋](https://so.toutiao.com/search?keyword=洪秀柱和AI下象棋)
+1. [华为Pura 70标准版及Pro+版开售](https://so.toutiao.com/search?keyword=华为Pura+70标准版及Pro+版开售)
 1. [男子转移被困家人 边救人边吐泥水](https://so.toutiao.com/search?keyword=男子转移被困家人+边救人边吐泥水)
+1. [亚洲打响货币保卫战？](https://so.toutiao.com/search?keyword=亚洲打响货币保卫战？)
+1. [伊朗外长：“袭击”伊的武器像玩具](https://so.toutiao.com/search?keyword=伊朗外长：“袭击”伊的武器像玩具)
+1. [北大校运动会现人工智能机器人](https://so.toutiao.com/search?keyword=北大校运动会现人工智能机器人)
+1. [以军撤离后汗尤尼斯发现两个乱葬坑](https://so.toutiao.com/search?keyword=以军撤离后汗尤尼斯发现两个乱葬坑)
+1. [以伊对抗展现双方军事实力差距](https://so.toutiao.com/search?keyword=以伊对抗展现双方军事实力差距)
+1. [上学前跳楼身亡男孩父亲发声](https://so.toutiao.com/search?keyword=上学前跳楼身亡男孩父亲发声)
+1. [俄方批评美众院通过没收俄资产法案](https://so.toutiao.com/search?keyword=俄方批评美众院通过没收俄资产法案)
+1. [加沙超万名妇女被杀害 联合国发声](https://so.toutiao.com/search?keyword=加沙超万名妇女被杀害+联合国发声)
+1. [洪秀柱提问学生：如何解决两岸困境](https://so.toutiao.com/search?keyword=洪秀柱提问学生：如何解决两岸困境)
 1. [男童头朝下被马拖行数百米去世](https://so.toutiao.com/search?keyword=男童头朝下被马拖行数百米去世)
 1. [9岁男孩当街遭人重伤](https://so.toutiao.com/search?keyword=9岁男孩当街遭人重伤)
-1. [中非共和国沉船事故已致62人死亡](https://so.toutiao.com/search?keyword=中非共和国沉船事故已致62人死亡)
-1. [布林肯4月24日至26日访华](https://so.toutiao.com/search?keyword=布林肯4月24日至26日访华)
 1. [父亲殴打霸凌者获赞：私力复仇可行吗](https://so.toutiao.com/search?keyword=父亲殴打霸凌者获赞：私力复仇可行吗)
-1. [央媒评许美静演唱会风波](https://so.toutiao.com/search?keyword=央媒评许美静演唱会风波)
-1. [金融机构纷纷上调金价预期](https://so.toutiao.com/search?keyword=金融机构纷纷上调金价预期)
-1. [大V评家长殴打霸凌者：学校不作为](https://so.toutiao.com/search?keyword=大V评家长殴打霸凌者：学校不作为)
-1. [女律师否认做擦边直播月入2万](https://so.toutiao.com/search?keyword=女律师否认做擦边直播月入2万)
 1. [全红婵书包挂了个“动物园”吧](https://so.toutiao.com/search?keyword=全红婵书包挂了个“动物园”吧)
 1. [今年第二个龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=今年第二个龙年龙月龙日龙时)
-1. [落马官员曾为儿子公司“开路”](https://so.toutiao.com/search?keyword=落马官员曾为儿子公司“开路”)
 1. [男孩跳向路边井盖 不慎掉进下水道](https://so.toutiao.com/search?keyword=男孩跳向路边井盖+不慎掉进下水道)
 1. [专家：美国对外援助法案让战争升级](https://so.toutiao.com/search?keyword=专家：美国对外援助法案让战争升级)
-1. [外国游客在中国旅游被淋成落汤鸡](https://so.toutiao.com/search?keyword=外国游客在中国旅游被淋成落汤鸡)
-1. [上铺老人强占下铺还指责铁路](https://so.toutiao.com/search?keyword=上铺老人强占下铺还指责铁路)
-1. [北京大风冰雹来袭](https://so.toutiao.com/search?keyword=北京大风冰雹来袭)
-1. [女老师去学校路上失踪 警方立案](https://so.toutiao.com/search?keyword=女老师去学校路上失踪+警方立案)
-1. [北大校运动会现人工智能机器人](https://so.toutiao.com/search?keyword=北大校运动会现人工智能机器人)
-1. [加沙超万名妇女被杀害 联合国发声](https://so.toutiao.com/search?keyword=加沙超万名妇女被杀害+联合国发声)
 1. [专家称休假改革难在众口难调](https://so.toutiao.com/search?keyword=专家称休假改革难在众口难调)
-1. [华为Pura 70标准版及Pro+版开售](https://so.toutiao.com/search?keyword=华为Pura+70标准版及Pro+版开售)
-1. [洪秀柱和AI下象棋](https://so.toutiao.com/search?keyword=洪秀柱和AI下象棋)
 1. [为何被海鲜扎手可能丧命](https://so.toutiao.com/search?keyword=为何被海鲜扎手可能丧命)
 1. [女子找王婆说媒要求男方月入超2万5](https://so.toutiao.com/search?keyword=女子找王婆说媒要求男方月入超2万5)
 1. [为何年轻人交个人养老金积极性不高](https://so.toutiao.com/search?keyword=为何年轻人交个人养老金积极性不高)
-1. [智界汽车发文感谢雷军推荐智界S7](https://so.toutiao.com/search?keyword=智界汽车发文感谢雷军推荐智界S7)
 1. [名嘴：解放军很快就可到达台北上空](https://so.toutiao.com/search?keyword=名嘴：解放军很快就可到达台北上空)
 1. [黄瓜高产操作指南](https://so.toutiao.com/search?keyword=黄瓜高产操作指南)
 1. [法报称巴黎奥运会筹备面临七大挑战](https://so.toutiao.com/search?keyword=法报称巴黎奥运会筹备面临七大挑战)
@@ -60,7 +75,6 @@
 1. [官方辟谣广东英德洪水致码头溃堤](https://so.toutiao.com/search?keyword=官方辟谣广东英德洪水致码头溃堤)
 1. [广东英德洪水水位有所下降](https://so.toutiao.com/search?keyword=广东英德洪水水位有所下降)
 1. [家长疑殴打霸凌女儿的同学被行拘](https://so.toutiao.com/search?keyword=家长疑殴打霸凌女儿的同学被行拘)
-1. [新能源车主称买车容易养车难](https://so.toutiao.com/search?keyword=新能源车主称买车容易养车难)
 1. [产妇父亲突然倒地医护人员光速抢救](https://so.toutiao.com/search?keyword=产妇父亲突然倒地医护人员光速抢救)
 1. [父亲拍14岁女儿杂乱房间发同学群](https://so.toutiao.com/search?keyword=父亲拍14岁女儿杂乱房间发同学群)
 1. [台男子坠入山谷10天机智自救](https://so.toutiao.com/search?keyword=台男子坠入山谷10天机智自救)
@@ -69,7 +83,6 @@
 1. [司机后座藏38万现金入境被海关查获](https://so.toutiao.com/search?keyword=司机后座藏38万现金入境被海关查获)
 1. [女子福建海边偶遇蓝眼泪](https://so.toutiao.com/search?keyword=女子福建海边偶遇蓝眼泪)
 1. [雷军：北京车展上会详细介绍产能](https://so.toutiao.com/search?keyword=雷军：北京车展上会详细介绍产能)
-1. [亚洲打响货币保卫战？](https://so.toutiao.com/search?keyword=亚洲打响货币保卫战？)
 1. [运动员东京奥运会药检阳性？中方回应](https://so.toutiao.com/search?keyword=运动员东京奥运会药检阳性？中方回应)
 1. [以男子踢翻巴勒斯坦国旗后遭炸伤](https://so.toutiao.com/search?keyword=以男子踢翻巴勒斯坦国旗后遭炸伤)
 1. [钟薛高创始人：卖红薯也要把债还上](https://so.toutiao.com/search?keyword=钟薛高创始人：卖红薯也要把债还上)
@@ -88,7 +101,6 @@
 1. [万达集团“瘦身”计划仍在持续](https://so.toutiao.com/search?keyword=万达集团“瘦身”计划仍在持续)
 1. [比亚迪唐家族多车上市](https://so.toutiao.com/search?keyword=比亚迪唐家族多车上市)
 1. [男子爬树摘樱桃不慎坠亡](https://so.toutiao.com/search?keyword=男子爬树摘樱桃不慎坠亡)
-1. [杨幂新剧演技](https://so.toutiao.com/search?keyword=杨幂新剧演技)
 1. [谷爱凌在姚明旁秒变mini](https://so.toutiao.com/search?keyword=谷爱凌在姚明旁秒变mini)
 1. [1只虾28元：明码标价不等于随意定价](https://so.toutiao.com/search?keyword=1只虾28元：明码标价不等于随意定价)
 1. [俄军称一天内击落194架乌军无人机](https://so.toutiao.com/search?keyword=俄军称一天内击落194架乌军无人机)
